task_2/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-ingress
  namespace: next-webapp-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: my-application.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next-webapp
                port:
                  number: 12345
